--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="portfolio"
-      content="Web site created using create-react-app"
+      content="Web-dev Portfolio"
     />
-    <title>Web-dev Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
